--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "project-auth-frontend",
+  "name": "technigo-react-starter",
   "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.3.4",
     "babel-eslint": "^10.0.3",
     "eslint": "^6.7.1",
     "eslint-config-airbnb": "^18.0.1",
@@ -10,9 +11,14 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.16.0",
     "eslint-plugin-react-hooks": "^2.3.0",
+    "moment": "^2.24.0",
     "react": "^16.12.0",
+    "react-date-picker": "^8.0.1",
+    "react-datepicker": "^2.14.1",
     "react-dom": "^16.12.0",
-    "react-scripts": "^3.3.0"
+    "react-redux": "^7.2.0",
+    "react-scripts": "3.2.0",
+    "styled-components": "^5.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
